<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="home.sven.hbm_android.AutomaticSettingsActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/hbm_lux_settings"
        android:id="@+id/luxSettingsTextView"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:layout_marginBottom="10dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/imageButton6"
            android:src="@drawable/ic_info_black_24dp"
            android:background="#00ffffff"
            android:layout_marginLeft="10dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/auto_boot_settings"
            android:id="@+id/textView6"
            android:gravity="center"
            android:textSize="18dp"
            android:textAlignment="center"
            android:layout_weight="1" />

        <Switch
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/autobootServiceSwitch"
            android:textAlignment="center"
            android:textSize="20dp"
            android:checked="false"
            android:layout_weight="2" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/imageButton"
            android:src="@drawable/ic_info_black_24dp"
            android:background="#00ffffff"
            android:layout_marginLeft="10dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/hbm_lux_activation_limit"
            android:id="@+id/textView2"
            android:gravity="center"
            android:layout_weight="1"
            android:textSize="18dp"
            android:textAlignment="center" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/luxActivationLimitEditText"
            android:layout_weight="2" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/imageButton2"
            android:src="@drawable/ic_info_black_24dp"
            android:background="#00ffffff"
            android:layout_marginLeft="10dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/hbm_lux_deactivation_limit"
            android:id="@+id/textView3"
            android:gravity="center"
            android:layout_weight="1"
            android:textSize="18dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/luxDeactivationLimitEditText"
            android:layout_weight="2" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/imageButton3"
            android:src="@drawable/ic_info_black_24dp"
            android:background="#00ffffff"
            android:layout_marginLeft="10dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/lux_values_average_loop"
            android:gravity="center"
            android:id="@+id/textView"
            android:layout_weight="1"
            android:textSize="18dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/averageValuesEditText"
            android:layout_weight="2" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/imageButton5"
            android:src="@drawable/ic_info_black_24dp"
            android:background="#00ffffff"
            android:layout_marginLeft="10dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/lux_full_sleep_average_loop_activation"
            android:id="@+id/textView4"
            android:gravity="center"
            android:layout_weight="1"
            android:textSize="18dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/averageLoopSleepActivationEditText"
            android:layout_weight="2" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/imageButton4"
            android:src="@drawable/ic_info_black_24dp"
            android:background="#00ffffff"
            android:layout_marginLeft="10dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/lux_full_sleep_average_loop_deactivation"
            android:id="@+id/textView5"
            android:gravity="center"
            android:layout_weight="1"
            android:textSize="18dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/averageLoopSleepDeactivationEditText"
            android:layout_weight="2" />
    </LinearLayout>

</LinearLayout>
